--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "better-sse": "^0.10.0",
     "dotenv": "^16.3.1",
-    "fastify": "^4.24.3"
+    "fastify": "^4.24.3",
+    "fastify-socket.io": "^5.0.0",
+    "socket.io": "^4.7.2"
   }
 }
