--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^8.4.1",
     "better-sse": "^0.10.0",
     "dotenv": "^16.3.1",
     "fastify": "^4.24.3",
     "fastify-socket.io": "^5.0.0",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "ws": "^8.14.2"
   }
 }
